--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   provider: ^6.1.2
   shared_preferences: ^2.3.2
   flutter_dotenv: ^5.1.0
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
